--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,66 @@
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/media.css">
 </head>
+
 <body>
   <header class="header"></header>
-  <main class="main"></main>
+  <main class="main">
+    <div class="nike__shop">
+      <div class="nike__shop-sneakers">
+        <img src="image/sneakers_1.png" alt="" class="sneakers__img">
+        <h2 class="sneakers__title">Nike Air VaporMax Flyknit 3</h2>
+        <p class="sneakers__text">The Nike Air VaporMax Flyknit 3 brings bounce to your step with Max Air cushioning
+          that stretches from...</p>
+        <div class="sneakers__item">
+          <button class="sneakers__btn">buy</button>
+          <p class="sneakers__text2">$180</p>
+        </div>
+      </div>
+      <div class="nike__shop-sneakers">
+        <img src="image/sneakers_2.png" alt="" class="sneakers__img">
+        <h2 class="sneakers__title">Nike Air VaporMax Plus</h2>
+        <p class="sneakers__text">The Nike Air VaporMax Plus looks to the past and propels you into the future. Nodding
+          to the '98 Air Max Plus...</p>
+        <div class="sneakers__item">
+          <button class="sneakers__btn">buy</button>
+          <p class="sneakers__text2">$200</p>
+        </div>
+      </div>
+      <div class="nike__shop-sneakers">
+        <img src="image/sneakers_3.png." alt="" class="sneakers__img">
+        <h2 class="sneakers__title">Nike Air Max 2090 BETRUE</h2>
+        <p class="sneakers__text">March into the future in your Nike Air Max 2090 BETRUE, a bold new look inspired by
+          the iconic Air Max 90. Celebrating...</p>
+        <div class="sneakers__item">
+          <button class="sneakers__btn">buy</button>
+          <p class="sneakers__text2">$150</p>
+        </div>
+      </div>
+      <div class="nike__shop-sneakers">
+        <img src="image/sneakers_4.png." alt="" class="sneakers__img">
+        <h2 class="sneakers__title">Nike Air Max 270 React</h2>
+        <p class="sneakers__text">The Nike Air Max 270 React brings the flames to ignite your kick game. React
+          technology delivers a smooth...</p>
+        <div class="sneakers__item">
+          <button class="sneakers__btn">buy</button>
+          <p class="sneakers__text2">$160</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="motivation">
+      <div class="box ">
+        <h2 class="box__title">NIKE
+          <br>
+          <br>
+          Just Do It
+        </h2>
+      </div>
+    </div>
+
+
+  </main>
   <footer class="footer"></footer>
 </body>
+
 </html>
